# grid-inference-worker

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  grid-inference-worker.spec  icon.icns  pyproject.toml
.github/workflows/: build.yml
inference_worker/: api_client.py  cli.py  config.py  detect_backends.py  env_utils.py  gui.py  ollama_detect.py  service.py  worker.py
inference_worker/web/: app.py  routes.py
inference_worker/web/static/: style.css
inference_worker/web/templates/: base.html  dashboard.html  login.html  logs.html  settings.html  setup.html
scripts/: build-exe.ps1  make_icon.py
